--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -10,6 +10,11 @@ body {
     color: #ffffff;
   }
   
+  .container {
+    padding: 40px;
+    padding-right: 0;
+  }
+  
   .title {
     color: #ffffff;
   }
@@ -22,7 +27,7 @@ body {
   }
   
   .gallery .card {
-    transition: .1s linear;
+    transition: 0.1s linear;
   }
   
   .gallery .card:hover {
@@ -32,5 +37,43 @@ body {
   
   p {
     font-size: 12px;
+  }
+  
+  .detail__img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 500px;
+    background-color: #ffffff;
+    overflow: hidden;
+  }
+  
+  .detail__img::after {
+    content: "";
+    background-image: linear-gradient(transparent 60%, #1f1f1f);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+  }
+  
+  img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    object-position: top;
+  }
+  
+  .detail__name {
+    position: absolute;
+    z-index: 5;
+    top: 400px;
+  }
+  
+  .detail__container {
+    margin-top: 500px;
   }
   
