--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Home{% endblock %}
+
 {% block content %}
 <h1 class="title is-1 py-5 has-text-centered">Spotify HOME</h1>
 {% endblock %}
